[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huntrecht-sdk"
version = "0.1.0"
description = "Official Python SDK for the Huntrecht Platform API v1"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Huntrecht", email = "dev@huntrecht.com"},
]
keywords = ["huntrecht", "api", "sdk", "b2b", "ecommerce", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://github.com/huntrecht/sdk-python"
Documentation = "https://docs.huntrecht.com/guide/"
Repository = "https://github.com/huntrecht/sdk-python"

[tool.setuptools.packages.find]
include = ["huntrecht*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
